2012-06-30  Carlos O'Donell  <carlos_odonell@mentor.com>

	* NEWS: Update copyright. Remove last-updated date.
	Mention math library bug fixes and timezone data changes.
	* README: Mention GNU/Hurd, x32, and HPPA support status.

2012-06-28  Thomas Schwinge  <thomas@codesourcery.com>

	* manual/contrib.texi (Contributors): Sort alphabetically by last name.

2012-06-27  Andreas Jaeger  <aj@suse.de>

	* manual/contrib.texi (Contributors): Add Samuel Thibault.

2012-06-25  Andreas Jaeger  <aj@suse.de>

	* sysdeps/s390/fpu/libm-test-ulps: Update.

2012-06-23  Andreas Schwab  <schwab@linux-m68k.org>
	    Thomas Schwinge  <thomas@codesourcery.com>

	* sysdeps/unix/sysv/linux/sh/syscalls.list: Add fanotify_mark.
	* sysdeps/unix/sysv/linux/sh/Versions (GLIBC_2.16): Add fanotify_mark.
	* sysdeps/unix/sysv/linux/sh/nptl/libc.abilist (GLIBC_2.16): Add
	fanotify_mark.

2012-06-23  Thomas Schwinge  <thomas@codesourcery.com>

	* sysdeps/mach/start.c: Remove file.
	* sysdeps/mach/hurd/i386/static-start.S: Fix start.S include.
	* sysdeps/i386/init-first.c: Fix comment regarding start.S.
	* sysdeps/sh/init-first.c: Likewise.

	* sysdeps/sh/____longjmp_chk.S (CALL_FAIL): Preserve r12 and pr
	registers for frame unwinding purposes, add CFI directives.
	* sysdeps/unix/sysv/linux/sh/____longjmp_chk.S (CALL_FAIL): Likewise.
	* sysdeps/unix/sysv/linux/sh/makecontext.S (.Lexitcode): Likewise
	* sysdeps/unix/sysv/linux/sh/sysdep.h (SYSCALL_ERROR_HANDLER):
	Likewise.

	* sysdeps/sh/____longjmp_chk.S (CALL_FAIL): Don't plan for the call to
	__fortify_fail returning.
	* sysdeps/unix/sysv/linux/sh/____longjmp_chk.S (CALL_FAIL): Likewise.

	* sysdeps/unix/sysv/linux/sh/____longjmp_chk.S: New file, based on
	sysdeps/sh/____longjmp_chk.S.
	* sysdeps/unix/sysv/linux/sh/sigaltstack-offsets.sym: New file, based
	on sysdeps/unix/sysv/linux/x86_64/sigaltstack-offsets.sym.
	* sysdeps/unix/sysv/linux/sh/Makefile [subdir=misc]
	(gen-as-const-headers): Append sigaltstack-offsets.sym.
